--- a/app.json
+++ b/app.json
@@ -7,6 +7,13 @@
       "scalpel"
     ],
     "repository": "https://github.com/cammbyrne/SQA_Assignment_3",
-    "success_url": "/welcome"
+    "success_url": "/welcome",
+    "environments": {
+    "test": {
+      "scripts": {
+        "test": "bundle exec rake test"
+      }
+    }
+  }
     
   }
