--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
     "environments": {
     "test": {
       "scripts": {
-        "test": ""
+        "test-setup": "python manage.py collectstatic --noinput",
+        "test": "python Test_BMI_Calculator.py test"
       }
     }
   }
