--- a/app.json
+++ b/app.json
@@ -11,7 +11,9 @@
     "environments": {
     "test": {
       "scripts": {
-        "test": "python Test_BMI_Calculator.py"
+        "test": "python Test_BMI_Calculator.py",
+         "test: "Test_Retirement_Tracker.py"
+
       }
     }
   }
