--- a/app.json
+++ b/app.json
@@ -11,8 +11,7 @@
     "environments": {
     "test": {
       "scripts": {
-        "test": "python Test_BMI_Calculator.py",
-        "test": "python Test_Retirement_Tracker.py"
+        "test": "python Tests.py"
 
       }
     }
